[package]
name = "pallet-referral"
version = "1.0.0"
description = "PezkuwiChain Referral Management Pallet"
authors.workspace = true
homepage.workspace = true
edition.workspace = true
license.workspace = true
publish = false
repository.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { default-features = false, features = ["derive"], workspace = true }
scale-info = { default-features = false, features = ["derive"], workspace = true }
frame-benchmarking = { default-features = false, optional = true, workspace = true }
frame-support = { default-features = false, workspace = true }
frame-system = { default-features = false, workspace = true }
pallet-identity-kyc = { path = "../identity-kyc", default-features = false }
log = { default-features = false, workspace = true }
sp-runtime = { default-features = false, workspace = true }
sp-std = { default-features = false, workspace = true }

# Projemizin özel tiplerini ve trait'lerini içeren kütüphane
pezkuwi-primitives = { path = "../../primitives", default-features = false }

[dev-dependencies]
sp-core = { workspace = true }
sp-io = { workspace = true }
pallet-balances = { workspace = true }
pallet-nfts = { workspace = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-identity-kyc/std",
	"log/std",
	"pallet-balances/std",
    "pallet-nfts/std",
	"scale-info/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
    "sp-std/std",
    "pezkuwi-primitives/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
    "pezkuwi-primitives/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
]