[package]
name = "pallet-staking-score"
version = "1.0.0"
description = "PezkuwiChain Staking Score Calculation Pallet"
authors.workspace = true
homepage.workspace = true
edition.workspace = true
license.workspace = true
publish = false
repository.workspace = true

[dependencies]
codec = { package = "parity-scale-codec", default-features = false, features = ["derive"], workspace = true }
scale-info = { default-features = false, features = ["derive"], workspace = true }
frame-support = { default-features = false, workspace = true }
frame-system = { default-features = false, workspace = true }
sp-runtime = { default-features = false, workspace = true }
sp-std = { default-features = false, workspace = true }
serde = { version = "1.0.197", default-features = false, features = ["derive"], optional = true }
frame-benchmarking = { workspace = true, default-features = false, optional = true }
pallet-staking = { workspace = true, default-features = false, optional = true }
pallet-balances = { workspace = true, default-features = false, optional = true }
pezkuwichain-constants = { workspace = true, default-features = false, optional = true }

# PezkuwiChain'in özel tiplerini ve trait'lerini içeren kütüphane
pezkuwi-primitives = { path = "../../primitives", default-features = false }

[dev-dependencies]
sp-core = { workspace = true, features = ["std"] }
sp-io = { workspace = true, features = ["std"] }
sp-runtime = { workspace = true, features = ["std"] }
frame-support = { workspace = true, features = ["std"] }
frame-system = { workspace = true, features = ["std"] }
pallet-balances = { workspace = true, features = ["std"] }
pezkuwi-primitives = { workspace = true, path = "../../primitives", features = ["std"] }
pallet-staking = { workspace = true, features = ["std", "runtime-benchmarks"] }
pallet-session = { workspace = true, features = ["std"] }
pallet-timestamp = { workspace = true, features = ["std"] }
pallet-bags-list = { workspace = true, features = ["std"] }
frame-election-provider-support = { workspace = true, features = ["std"] }
sp-staking = { workspace = true, features = ["std"] }
sp-npos-elections = { workspace = true, features = ["std"] }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances?/std",
	"pallet-staking?/std",
	"pezkuwichain-constants?/std",
	"scale-info/std",
	"serde?/std",
	"sp-runtime/std",
	"sp-std/std",
	"pezkuwi-primitives/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-staking/runtime-benchmarks",
	"pezkuwichain-constants",
	"sp-runtime/runtime-benchmarks",
	"pezkuwi-primitives/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-balances?/try-runtime",
	"pallet-staking?/try-runtime",
]