[package]
name = "pallet-trust"
version = "0.1.0"
description = "Pallet for calculating and managing user trust scores based on various on-chain activities."
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# External
log = { version = "0.4.17", default-features = false }
serde = { version = "1.0.188", default-features = false, features = ["derive"], optional = true }
parity-scale-codec = { version = "3.6.1", default-features = false, features = ["derive"] }
scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }
num-traits = { version = "0.2.16", default-features = false }

# Substrate Primitives
sp-core = { default-features = false, path = "../../../../primitives/core" }
sp-io = { default-features = false, path = "../../../../primitives/io" }
sp-runtime = { default-features = false, path = "../../../../primitives/runtime" }
sp-std = { default-features = false, path = "../../../../primitives/std" }

# Substrate FRAME
frame-support = { default-features = false, path = "../../../../frame/support" }
frame-system = { default-features = false, path = "../../../../frame/system" }
frame-benchmarking = { default-features = false, path = "../../../../frame/benchmarking", optional = true }
pallet-scheduler = { default-features = false, path = "../../../../frame/scheduler" }

# Pezkuwi
pezkuwi-primitives = { default-features = false, path = "../../../../primitives/pezkuwi" }
pallet-trust-api = { default-features = false, path = "./api" }
pallet-egitim = { default-features = false, path = "../egitim" }
pallet-pez-staking = { default-features = false, path = "../pez-staking" }
pallet-referral = { default-features = false, path = "../referral" }
pallet-nft = { default-features = false, path = "../nft" }


[dev-dependencies]
sp-core = { default-features = false, path = "../../../../primitives/core" }
sp-io = { default-features = false, path = "../../../../primitives/io" }


[features]
default = ["std"]
std = [
	"log/std",
	"serde?/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"num-traits/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"frame-support/std",
	"frame-system/std",
	"frame-benchmarking?/std",
	"pezkuwi-primitives/std",
	"pallet-trust-api/std",
	"pallet-egitim/std",
	"pallet-pez-staking/std",
	"pallet-referral/std",
	"pallet-nft/std",
	"pallet-scheduler/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"pallet-egitim/runtime-benchmarks",
	"pallet-pez-staking/runtime-benchmarks",
	"pallet-referral/runtime-benchmarks",
	"pallet-nft/runtime-benchmarks",
	"pallet-scheduler/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"sp-runtime/try-runtime",
	"pallet-egitim/try-runtime",
	"pallet-pez-staking/try-runtime",
	"pallet-referral/try-runtime",
	"pallet-nft/try-runtime",
	"pallet-scheduler/try-runtime",
]