[package]
name = "pallet-validator-pool"
version = "1.0.0"
description = "Dynamic Validator Pool System for PezkuwiChain"
authors.workspace = true
homepage.workspace = true
edition.workspace = true
license.workspace = true
publish = false
repository.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.12", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { default-features = false, features = ["derive"], workspace = true }
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }

frame-support = { default-features = false, workspace = true }
frame-system = { default-features = false, workspace = true }
frame-benchmarking = { default-features = false, optional = true, workspace = true }
log = { default-features = false, workspace = true }
sp-runtime = { default-features = false, workspace = true }
sp-std = { default-features = false, workspace = true }
sp-core = { workspace = true, default-features = false, optional = true }
sp-io = { workspace = true, default-features = false, optional = true }

pallet-session = { default-features = false, workspace = true }

[dev-dependencies]
sp-core = { workspace = true }
sp-io = { workspace = true }
pallet-balances = { workspace = true }
sp-staking = { workspace = true, default-features = false } 
pallet-timestamp = { workspace = true }
serde = { version = "1.0" }

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-benchmarking?/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-balances/std",
    "sp-staking/std",
    "log/std",
    "pallet-session/std",
    "scale-info/std",
    "serde",
    "sp-core?/std",
    "sp-io?/std",
    "sp-runtime/std",
    "sp-std/std",
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
    "sp-core",
    "sp-io",
]
try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime",
    "pallet-session/try-runtime",
]