[package]
name = "pezkuwi-node-core-approval-voting-parallel"
version = "0.5.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Approval Voting Subsystem running approval work in parallel"
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
futures = { workspace = true }
gum.workspace = true
itertools = { workspace = true }
pezkuwi-approval-distribution.default-features = true
pezkuwi-approval-distribution.workspace = true
pezkuwi-node-core-approval-voting.default-features = true
pezkuwi-node-core-approval-voting.workspace = true
pezkuwi-node-metrics.default-features = true
pezkuwi-node-metrics.workspace = true
pezkuwi-node-network-protocol.default-features = true
pezkuwi-node-network-protocol.workspace = true
pezkuwi-node-primitives.default-features = true
pezkuwi-node-primitives.workspace = true
pezkuwi-node-subsystem-util.default-features = true
pezkuwi-node-subsystem-util.workspace = true
pezkuwi-node-subsystem.default-features = true
pezkuwi-node-subsystem.workspace = true
pezkuwi-overseer.default-features = true
pezkuwi-overseer.workspace = true
pezkuwi-primitives.default-features = true
pezkuwi-primitives.workspace = true
sc-keystore.default-features = false
sc-keystore.workspace = true
sp-consensus.default-features = false
sp-consensus.workspace = true

rand = { workspace = true }
rand_core = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
async-trait = { workspace = true }
kvdb-memorydb = { workspace = true }
pezkuwi-node-subsystem-test-helpers = { default-features = true, workspace = true }
schnorrkel = { workspace = true, default-features = true }
sp-consensus-babe = { default-features = true, workspace = true }
sp-core = { default-features = true, workspace = true }
sp-keyring = { default-features = true, workspace = true }
sp-tracing = { default-features = false, workspace = true }
