[package]
name = "pezkuwi-node-core-approval-voting"
version = "22.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Approval Voting Subsystem of the Pezkuwi node"
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
bitvec = { features = ["alloc"], workspace = true }
codec = { features = ["bit-vec", "derive"], workspace = true }
derive_more = { workspace = true, default-features = true }
futures = { workspace = true }
futures-timer = { workspace = true }
gum.default-features = true
gum.workspace = true
itertools = { workspace = true }
merlin = { workspace = true, default-features = true }
pezkuwi-node-primitives.default-features = true
pezkuwi-node-primitives.workspace = true
pezkuwi-node-subsystem-util.default-features = true
pezkuwi-node-subsystem-util.workspace = true
pezkuwi-node-subsystem.default-features = true
pezkuwi-node-subsystem.workspace = true
pezkuwi-overseer.default-features = true
pezkuwi-overseer.workspace = true
pezkuwi-primitives.default-features = true
pezkuwi-primitives.workspace = true
sc-keystore.workspace = true
schnellru = { workspace = true }
schnorrkel = { workspace = true, default-features = true }
sp-application-crypto = { features = ["full_crypto"], workspace = true }
sp-consensus-slots.workspace = true
sp-consensus.workspace = true
sp-runtime.workspace = true
thiserror = { workspace = true }
# rand_core should match schnorrkel
rand = { workspace = true, default-features = true }
rand_chacha = { workspace = true, default-features = true }
rand_core = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
async-trait = { workspace = true }
kvdb-memorydb = { workspace = true }
parking_lot = { workspace = true, default-features = true }
pezkuwi-node-subsystem-test-helpers = { workspace = true }
pezkuwi-primitives = { features = ["test"], default-features = false, workspace = true }
pezkuwi-primitives-test-helpers = { workspace = true }
sp-consensus-babe = { default-features = true, workspace = true }
sp-core = { default-features = true, workspace = true }
sp-keyring = { default-features = true, workspace = true }
sp-keystore = { default-features = true, workspace = true }
sp-tracing = { default-features = false, workspace = true }

pezkuwi-subsystem-bench = { workspace = true }

[[bench]]
name = "approval-voting-regression-bench"
path = "benches/approval-voting-regression-bench.rs"
harness = false
required-features = ["subsystem-benchmarks"]

[features]
subsystem-benchmarks = []
