[package]
name = "pezkuwi-node-core-av-store"
description = "The Availability Store subsystem. Wrapper over the DB that stores availability data and chunks."
version = "22.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
bitvec = { workspace = true, default-features = true }
futures = { workspace = true }
futures-timer = { workspace = true }
gum.default-features = true
gum.workspace = true
thiserror = { workspace = true }

codec = { features = ["derive"], workspace = true, default-features = true }
pezkuwi-erasure-coding.default-features = true
pezkuwi-erasure-coding.workspace = true
pezkuwi-node-primitives.default-features = true
pezkuwi-node-primitives.workspace = true
pezkuwi-node-subsystem-util.default-features = true
pezkuwi-node-subsystem-util.workspace = true
pezkuwi-node-subsystem.default-features = true
pezkuwi-node-subsystem.workspace = true
pezkuwi-primitives.default-features = true
pezkuwi-primitives.workspace = true
sp-consensus.workspace = true

[dev-dependencies]
assert_matches = { workspace = true }
kvdb-memorydb = { workspace = true }
sp-tracing = { default-features = false, workspace = true }

parking_lot = { workspace = true, default-features = true }
pezkuwi-node-subsystem-test-helpers = { workspace = true }
pezkuwi-node-subsystem-util = { default-features = true, workspace = true }
pezkuwi-primitives-test-helpers = { workspace = true }
sp-core = { default-features = true, workspace = true }
sp-keyring = { default-features = true, workspace = true }
