[package]
name = "pezkuwi-node-core-backing"
version = "22.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "The Candidate Backing Subsystem. Tracks parachain candidates that can be backed, as well as the issuance of statements about candidates."
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
bitvec = { features = ["alloc"], workspace = true }
fatality = { workspace = true }
futures = { workspace = true }
gum.default-features = true
gum.workspace = true
pezkuwi-erasure-coding.default-features = true
pezkuwi-erasure-coding.workspace = true
pezkuwi-node-primitives.default-features = true
pezkuwi-node-primitives.workspace = true
pezkuwi-node-subsystem-util.default-features = true
pezkuwi-node-subsystem-util.workspace = true
pezkuwi-node-subsystem.default-features = true
pezkuwi-node-subsystem.workspace = true
pezkuwi-parachain-primitives.default-features = true
pezkuwi-parachain-primitives.workspace = true
pezkuwi-primitives.default-features = true
pezkuwi-primitives.workspace = true
pezkuwi-statement-table.default-features = true
pezkuwi-statement-table.workspace = true
schnellru = { workspace = true }
sp-keystore.default-features = true
sp-keystore.workspace = true
thiserror = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
futures = { features = ["thread-pool"], workspace = true }
pezkuwi-node-subsystem-test-helpers = { workspace = true }
pezkuwi-primitives = { features = ["test"], default-features = false, workspace = true }
pezkuwi-primitives-test-helpers = { workspace = true }
sc-keystore = { default-features = true, workspace = true }
sp-application-crypto = { default-features = true, workspace = true }
sp-core = { default-features = true, workspace = true }
sp-keyring = { default-features = true, workspace = true }
sp-tracing = { default-features = true, workspace = true }
